--- a/components/FilmsItem.sass
+++ b/components/FilmsItem.sass
@@ -34,6 +34,12 @@
 
   position: relative
 
+  @keyframes show 
+    from
+      opacity: 0
+    to
+      opacity: 1
+
   .card
     width: calc(100% - 10px)
     height: calc(100% - 10px)
@@ -86,7 +92,9 @@
       left: 0
       top: 0
 
+      animation: show 0.3s both
+
       position: absolute
-      background-color: rgba(255,200,200,0.6)
+      background-color: rgba(0,0,10,0.6)
 
       z-index: 2
